Update 02-docker-build-push-to-acs-deploy-to-aks-pipeline.yml for Azure Pipelines

--- a/02-docker-build-push-to-acs-deploy-to-aks-pipeline.yml
+++ b/02-docker-build-push-to-acs-deploy-to-aks-pipeline.yml
@@ -22,7 +22,7 @@ variables:
   vmImageName: 'ubuntu-latest'
 
   # Name of the new namespace being created to deploy the PR changes.
-  k8sNamespaceForPR: 'review-app-$(Build.BuildNumber)'
+  k8sNamespaceForPR: 'review-app-$(Build.SourceBranchName)'
 
 stages:
 - stage: Build
